--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
     <string name="app_name">Stage IT Run</string>
+    <string name="action_stage_spec">Dettagli stage</string>
+    <string name="action_trophy">Trofei</string>
+    <string name="action_profile">Profilo utente</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
-
+    <string name="nome_trofeo">Nome trofeo</string>
     <string name="nome_azienda">Nome Azienda</string>
     <string name="nome_stage">Nome stage</string>
     <string name="descrizione">Descrizione stage</string>
