--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,9 @@
     <string name="nome_stage">Nome stage</string>
     <string name="descrizione_stage">Descrizione stage</string>
     <string name="coda">Coda</string>
-    <string name="tempo_coda">00:00</string>
+    <string name="tempo_coda">00:00:00</string>
+    <string name="tempo_inizio">Inizio coda</string>
+    <string name="tempo_fine">Fine coda</string>
 
     <string name="user_profile_title">Profilo utente</string>
     <string name="user_profile_button_logout">Log out</string>
