--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="descrizione_stage">Descrizione stage</string>
     <string name="coda">Coda</string>
     <string name="tempo_coda">00:00:00</string>
+    <string name="numero_coda">000</string>
     <string name="tempo_inizio">Inizio coda</string>
     <string name="tempo_fine">Fine coda</string>
 
